--- a/tinasprout-core/build.gradle
+++ b/tinasprout-core/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+    implementation "com.alibaba:fastjson:1.2.83"
+    implementation 'io.netty:netty-all:4.1.86.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
