--- a/tinasprout-core/build.gradle
+++ b/tinasprout-core/build.gradle
@@ -1,34 +1,12 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.0.4'
-    id 'io.spring.dependency-management' version '1.1.0'
-}
-
-group = 'com.wuxianggujun'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation "com.alibaba:fastjson:1.2.83"
-    implementation 'io.netty:netty-all:4.1.86.Final'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+bootJar{
+    enabled = false
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
+jar{
+    enabled = true
 }
