修复BootJar打包报错

--- a/tinasprout-core/build.gradle
+++ b/tinasprout-core/build.gradle
@@ -3,6 +3,10 @@ repositories {
     mavenCentral()
 }
 
+springBoot {
+    mainClass = 'com.wuxianggujun.tinasproutcore.TinaSproutCoreApplication'
+}
+
 bootJar{
     enabled = false
 }
