--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:3.0.4")
+    }
+}
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.4'
