打包的还是有问题，打包不全

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 }
 
 bootJar {
+    enabled = true
     archiveBaseName = 'TinaSprout'
     archiveVersion = '0.0.1-SNAPSHOT'
     from sourceSets.main.output
