--- a/tinasprout-robot/build.gradle
+++ b/tinasprout-robot/build.gradle
@@ -1,12 +1,20 @@
-
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 springBoot {
-	mainClass = 'com.wuxianggujun.tinasproutrobot.TinasproutRobotApplication'
+    mainClass = 'com.wuxianggujun.tinasproutrobot.TinasproutRobotApplication'
 }
 
 dependencies {
-	implementation project(':tinasprout-core')
+    implementation project(':tinasprout-core')
+}
+bootJar {
+    enabled = false
+    archiveBaseName = 'tinasprout-robot'
+    archiveVersion = '0.0.1-SNAPSHOT'
+}
+
+jar {
+    enabled = true
 }
