不清楚哪里有问题

--- a/tinasprout-robot/build.gradle
+++ b/tinasprout-robot/build.gradle
@@ -2,9 +2,9 @@ repositories {
     mavenCentral()
 }
 
-springBoot {
+/*springBoot {
     mainClass = 'com.wuxianggujun.tinasproutrobot.TinasproutRobotApplication'
-}
+}*/
 
 
 dependencies {
