--- a/build.gradle
+++ b/build.gradle
@@ -39,11 +39,17 @@ springBoot {
     mainClass = 'com.wuxianggujun.tinasproutrobot.TinasproutRobotApplication'
 }
 
+allprojects {
+    apply plugin: 'java'
+    
+    
+}
+
 subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'java'
-
+    
+    
     bootJar {
         from sourceSets.main.output
         from configurations.runtimeClasspath.dependencies.collect { it.isDirectory() ? it : zipTree(it) }
