多模块的TinaSprout-core可以运行，但是还没有打包到主模块

--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,22 @@
 buildscript {
+    repositories {
+        mavenLocal()
+        maven {
+            url 'https://repo.huaweicloud.com/repository/maven/'
+        }
+    } 
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:3.0.4")
     }
 }
+
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.4'
+    id 'org.springframework.boot' version '3.0.4' apply false
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group 'com.wuxianggujun'
-version '1.0-SNAPSHOT'
-sourceCompatibility = '17'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
+/*
 bootJar {
     archiveBaseName = 'TinaSprout'
     archiveVersion = '0.0.1-SNAPSHOT'
@@ -32,29 +26,64 @@ bootJar {
     includeEmptyDirs = true
     // 设置输出目录，相对于项目根目录
     destinationDirectory = file("$buildDir/libs")
-}
+}*/
 
 
+/*
 springBoot {
     mainClass = 'com.wuxianggujun.tinasproutrobot.TinasproutRobotApplication'
 }
+*/
 
 allprojects {
     apply plugin: 'java'
+
+    group 'com.wuxianggujun'
+    version '1.0-SNAPSHOT'
+    sourceCompatibility = '17'
     
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
+    repositories {
+        mavenCentral()
+    }
     
+    dependencies {
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    }
+    
+
+    tasks.named('test') {
+        useJUnitPlatform()
+    }
+
 }
 
 subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     
-    
-    bootJar {
-        from sourceSets.main.output
-        from configurations.runtimeClasspath.dependencies.collect { it.isDirectory() ? it : zipTree(it) }
+    // spring boot构建任务
+    springBoot {
+        buildInfo()
     }
     
+   /* bootJar {
+        from sourceSets.main.output
+        from configurations.runtimeClasspath.dependencies.collect { it.isDirectory() ? it : zipTree(it) }
+    }*/
+    
+    dependencyManagement {
+        imports {
+            
+        }
+        
+    }
     
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter'
@@ -65,12 +94,8 @@ subprojects {
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
         annotationProcessor 'org.projectlombok:lombok'
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
-    tasks.named('test') {
-        useJUnitPlatform()
-    }
+ 
 }
