--- a/build.gradle
+++ b/build.gradle
@@ -50,16 +50,18 @@ allprojects {
 
     repositories {
         mavenCentral()
+        maven {
+            url 'https://repo.huaweicloud.com/repository/maven/'
+        }
     }
     
     dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     }
-    
 
-    tasks.named('test') {
-        useJUnitPlatform()
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
     }
 
 }
@@ -68,22 +70,18 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     
-    // spring boot构建任务
-    springBoot {
-        buildInfo()
-    }
     
    /* bootJar {
         from sourceSets.main.output
         from configurations.runtimeClasspath.dependencies.collect { it.isDirectory() ? it : zipTree(it) }
     }*/
     
-    dependencyManagement {
+   /* dependencyManagement {
         imports {
             
         }
         
-    }
+    }*/
     
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter'
@@ -95,6 +93,10 @@ subprojects {
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
+
+    tasks.named('test') {
+        useJUnitPlatform()
     }
 
  
