--- a/tinasprout-robot/build.gradle
+++ b/tinasprout-robot/build.gradle
@@ -2,6 +2,14 @@ springBoot {
     mainClass = 'com.wuxianggujun.tinasproutrobot.TinasproutRobotApplication'
 }
 
+bootJar {
+    archiveBaseName = 'TinaSprout'
+    archiveVersion = '0.0.1-SNAPSHOT'
+    // 将子模块一起打包进来
+    includeEmptyDirs = true
+    // 设置输出目录，相对于项目根目录
+    destinationDirectory = file("$buildDir/libs")
+}
 
 dependencies {
     implementation project(':tinasprout-core')
