添加将子模块的jar包输出到跟目录的build文件夹

--- a/tinasprout-robot/build.gradle
+++ b/tinasprout-robot/build.gradle
@@ -8,7 +8,7 @@ bootJar {
     // 将子模块一起打包进来
     includeEmptyDirs = true
     // 设置输出目录，相对于项目根目录
-    destinationDirectory = file("$buildDir/libs")
+    destinationDirectory = file("$rootDir/build")
 }
 
 dependencies {
