--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ subprojects {
     }
 
     dependencies {
+        implementation "com.alibaba:fastjson:1.2.83"
+        
         implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         compileOnly 'org.projectlombok:lombok'
